added pages and nav to frameupdemo-strapping

--- a/app/index.html
+++ b/app/index.html
@@ -30,38 +30,65 @@
             <div class="header">
                 <ul class="nav nav-pills pull-right">
                     <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="artsale.html">Art for Sale</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
-                <h3 class="text-muted">strapping</h3>
+                <h3 class="text-muted">Frame Up</h3>
             </div>
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="strapping/app/images/frames-bronzed.jpg" alt="...">
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+    ...
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
+</div>
 
             <div class="jumbotron">
-                <h1>'Allo, 'Allo!</h1>
-                <p class="lead">Always a pleasure scaffolding your apps.</p>
+                <h1>Frame Up</h1>
+                <p class="lead">Modern Custom art & picture framing </p>
+                <p class="lead">Serving Charleston, SC since 1977</p>
                 <p><a class="btn btn-lg btn-success" href="#">Splendid! <span class="glyphicon glyphicon-ok"></span></a></p>
             </div>
 
             <div class="row marketing">
                 <div class="col-lg-6">
-                    <h4>HTML5 Boilerplate</h4>
-                    <p>HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.</p>
+                    <h4>Custom Framing</h4>
+                    <p>Frame up provides the highest quality framing materials & the best customer service in Charleston. We utilize museum quality glass for your artwork. We can even provide one-day custom framing for your project.</p> 
 
-                    <h4>Sass</h4>
-                    <p>Sass is a mature, stable, and powerful professional grade CSS extension language.</p>
+                    <h4>Diploma and Document Framing</h4>
+                    <p>Custom matts perfect for any document that you would like to treasure for your home or business.</p>
 
-
-                    <h4>Bootstrap</h4>
+                    <h4>Ready made frames</h4>
                     <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
-
-                    <h4>Modernizr</h4>
-                    <p>Modernizr is an open-source JavaScript library that helps you build the next generation of HTML5 and CSS3-powered websites.</p>
 
                 </div>
             </div>
 
             <div class="footer">
-                <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+                <p><span class="glyphicon glyphicon-copyright-mark"></span> 2014: Frame Up- Charleston,SC</p>
             </div>
 
         </div>
