added carousel slider on index and added images

--- a/app/index.html
+++ b/app/index.html
@@ -49,13 +49,25 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="strapping/app/images/frames-bronzed.jpg" alt="...">
+      <img src="images/slider-bronzed.jpg" alt="...">
       <div class="carousel-caption">
-        ...
+         <h3>Customing Framing</h3>
       </div>
     </div>
-    ...
+    <div class="item">
+      <img src="images/slider-primary.jpg" alt="...">
+      <div class="carousel-caption">
+        <h3>One Day Framing</h3>
+      </div>
+    </div>
+    <div class="item">
+      <img src="images/slider-colors.jpg" alt="...">
+      <div class="carousel-caption">
+        <h3>Canvas stretching</h3>
+      </div>
   </div>
+
+
 
   <!-- Controls -->
   <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
@@ -68,7 +80,7 @@
 
             <div class="jumbotron">
                 <h1>Frame Up</h1>
-                <p class="lead">Modern Custom art & picture framing </p>
+                <p class="lead">Modern Custom Art & picture framing </p>
                 <p class="lead">Serving Charleston, SC since 1977</p>
                 <p><a class="btn btn-lg btn-success" href="#">Splendid! <span class="glyphicon glyphicon-ok"></span></a></p>
             </div>
